Update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .idea/*
 .nyc_output
 build
+dist
 node_modules
 test
 src/**.js
@@ -8,3 +9,6 @@ coverage
 *.log
 package-lock.json
 .DS_Store
+
+*--TODO.md
+*--NOTES.md
